...
import UIKit

private let mockRecipes: [Meal] = [
    Meal(
        idMeal: "52795",
        strMeal: "Chicken Handi",
        strArea: "Indian",
        strMealThumb: "https://www.themealdb.com/images/media/meals/wyxwsp1486979827.jpg",
        strInstructions: "Take a large pot or wok, heat the oil, add sliced onion and fry them until golden."
    ),
    Meal(
        idMeal: "52956",
        strMeal: "Chicken Congee",
...
